[6.0.0-SNAPSHOT] Cleanup